CHANGES TO HTML ABD CSS

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
         
     <div class="FIRST-Contsiner">
         <div class="profile_container">
+            <div id="MYPHOTO_container">
             <img id="MYPHOTO" src="myPhoto\RESUME PICTURE123456.jpg" alt="this is a picture of me">
-
+            </div>
             <!-- THIS IS THE TOP (NAVIGATION BAR) ITEMS -->
             <ul>
                 <li><a href="web developer resume.pdf">RESUME</a></li>
@@ -25,7 +26,7 @@
             </ul>
         </div>
 
-        <!-- this is the body container -->
+        <!-- THIS IS THE BODY CONTINER -->
         <div class="BODY_CONTAINER">
             <div id="hello-message-container">
                 <h1 id="hello">Hello<span style="color: yellow;">!</span></h1>
