--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="BODY_CONTAINER">
             <div id="hello-message-container">
                 <h1 id="hello">Hello<span style="color: yellow;">!</span></h1>
-                <h1 id="nameGREET" style="">I'm</h1>
+                <h1 id="nameGREET">I'm</h1>
                 <h1 id="SHAW">SHAW</h1>
                 <h1 style="font-size: 25px;font-weight: 100; letter-spacing: 8px; font-stretch: expanded;">front-end developer</h1>
             </div>
