newest Update today

--- a/index.html
+++ b/index.html
@@ -33,17 +33,22 @@
                 <h1 id="hello">Hello<span style="color: yellow;">!</span></h1>
                 <h1 id="nameGREET">I'm</h1>
                 <h1 id="SHAW">SHAW</h1>
-                <h1 style="font-size: 25px;font-weight: 100; letter-spacing: 8px; font-stretch: expanded;">front-end developer</h1>
+                <h1>front-end developer</h1>
             </div>
 
-            <div id="discription">
-                <h1><span>*</span>Intro</h1>
-                <p>As a front-end web developer, I specialize in crafting immersive and intuitive user experiences through the seamless integration of HTML, CSS, JavaScript, and React. With a keen eye for design and a passion for innovation, I strive to create websites and web applications that not
-                       only meet but exceed user expectations.</p>
-            </div>
-            <div id="discription">
-                <h1><span>*</span>Creativity</h1>
-                <p>"With a creative spark that ignites innovative solutions, I bring websites and web applications to life through my expertise in HTML, CSS, JavaScript, and React. My passion for design and user-centric approach enable me to craft immersive experiences that captivate and inspire.</p>
+
+            <!--PARENT CONTAINER FOR THE DISCRIPTION ITEMS  -->
+            
+            <div class="PARENT-DISCRIPTION">
+                <div id="discription">
+                    <h1><span>*</span>Intro</h1>
+                    <p>As a front-end web developer, I specialize in crafting immersive and intuitive user experiences through the seamless integration of HTML, CSS, JavaScript, and React. With a keen eye for design and a passion for innovation, I strive to create websites and web applications that not
+                        only meet but exceed user expectations.</p>
+                </div>
+                <div id="discription">
+                    <h1><span>*</span>Creativity</h1>
+                    <p>"With a creative spark that ignites innovative solutions, I bring websites and web applications to life through my expertise in HTML, CSS, JavaScript, and React. My passion for design and user-centric approach enable me to craft immersive experiences that captivate and inspire.</p>
+                </div>
             </div>
         </div>
 
