LATEST UPDATE TODAY

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
             <div id="DATE">
                 <h1>Made With:</h1>
-                <h2>XXXXX, XXXXX, XXXXX</h2>
+                <h2>HTML, CSS, JavaScript</h2>
             </div>
 
             <div id="MADE-WITH">
@@ -146,13 +146,13 @@
 
             <div id="DISCRIPTION">
                 <h1>Code Discription:</h1>
-                <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, optio. Veniam esse maiores provident harum est aliquid qui, molestiae explicabo. Est harum reprehenderit at ea eos architecto cum eius omnis ex a.</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, optio. Veniam esse maiores provident harum est aliquid qui, molestiae explicabo. Est harum reprehenderit at ea eos architecto cum eius omnis ex a.</p>
             </div>
         </div>
     </div>
 
-                                              <!--{ PROJECT #2 }-->
-    
+<!-- SECOND PROJECT -->
+<!-- ....................................................................................................................................................................................................................................................... -->
       <div class="projectsMainContainer">
         <!-- MY IMAGE SHOULD BE ON TOP -->
         <div id="projectIMAGE">
@@ -169,7 +169,7 @@
 
             <div id="DATE">
                 <h1>Made With:</h1>
-                <h2>XXXXX, XXXXX, XXXXX</h2>
+                <h2>HTML, CSS, JavaScript</h2>
             </div>
 
             <div id="MADE-WITH">
@@ -186,9 +186,12 @@
 
             <div id="DISCRIPTION">
                 <h1>Code Discription:</h1>
-                <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, optio. Veniam esse maiores provident harum est aliquid qui, molestiae explicabo. Est harum reprehenderit at ea eos architecto cum eius omnis ex a.</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, optio. Veniam esse maiores provident harum est aliquid qui, molestiae explicabo. Est harum reprehenderit at ea eos architecto cum eius omnis ex a.</p>
             </div>
         </div>
+    </div>
+<!-- ...................................................................................................................................................................................................................................................... -->
+                                              <!--{ PROJECT #2 }-->   
     </div>
     <div>
 
