--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
                 </div>
                 <div id="discription">
                     <h1><span>*</span>Creativity</h1>
-                    <p>"With a creative spark that ignites innovative solutions, I bring websites and web applications to life through my expertise in HTML, CSS, JavaScript, and React. My passion for design and user-centric approach enable me to craft immersive experiences that captivate and inspire.</p>
+                    <p>With a creative spark that ignites innovative solutions, I bring websites and web applications to life through my expertise in HTML, CSS, JavaScript, and React. My passion for design and user-centric approach enable me to craft immersive experiences that captivate and inspire.</p>
+                </div>
+                <div id="discription">
+                    <h1><span>*</span>Creativity</h1>
+                    <p>I'm a front-end web developer who's all about keeping things simple. Using HTML, CSS, JavaScript, and React, I craft user-friendly websites that are both elegant and easy to use. I focus on simplicity to ensure a seamless experience for users, paying close attention to detail to create visually appealing and intuitive designs.</p>
                 </div>
             </div>
         </div>
