--- a/PROJECTS_Page.html
+++ b/PROJECTS_Page.html
@@ -1,103 +1,192 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="PROJECT_Style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    
-<!-- THIS IS MY PROJECT SECTION -->
-<div class="PROJECT-PARENT-container" >
-    <div id="projectReturnIXiconContainer" >
-        <i id="projectReturnIXicon" class="fa-solid fa-x fa-beat-fade" ></i>
+    <div class="Project_Container">
+
+
+    <!-- project main container -->
+    <div class="projectsMainContainer">
+
+     <!-- HOME NAVIGATION -->
+        <div class="Home_section">
+            <a href= "index.html"><i class="fa-solid fa-house fa-beat"></i></a>
+        </div>
+
+        <!-- PROJECT CONTAINER -->
+        <div class="PROJECT-PARENT-container">
+            <div class="PROJECT_container">
+                <div class="projectIMAGE">
+                    <img src="https://images.unsplash.com/photo-1716565679311-5179cc3dd908?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Anas Alshanti's Photo"> 
+                </div>
+                <div class="TITLE">
+                    <h1>Title:</h1>
+                    <h2>XXXXX</h2>
+                </div>
+                <div class="DATE">
+                    <h1>Made With:</h1>
+                    <h2>HTML, CSS, JavaScript</h2>
+                </div>
+                <div class="MADE-WITH">
+                    <h1>Created on:</h1>
+                    <h2>Pending...</h2>
+                </div>
+                <!-- THESE ITEMS IS LEFT ALIGN -->
+                <div class="RESPONSIVE">
+                    <h1 id="left">Responsive:</h1>
+                    <h2 id="left">Yes</h2>
+                </div>
+                <div class="DISCRIPTION">
+                    <h1 id="left">Code Discription:</h1>
+                    <p id="left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, optio. Veniam esse maiores provident harum est aliquid qui, molestiae explicabo. Est harum reprehenderit at ea eos architecto cum eius omnis ex a.</p>
+                </div>
+            </div>
+
+
+            <!-- MY PROCECTS -->
+            <div class="PROJECT_container">
+                <div class="projectIMAGE">
+                    <img src="https://images.unsplash.com/photo-1716565679311-5179cc3dd908?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Anas Alshanti's Photo"> 
+                </div>
+                <div class="TITLE">
+                    <h1>Title:</h1>
+                    <h2>XXXXX</h2>
+                </div>
+                <div class="DATE">
+                    <h1>Made With:</h1>
+                    <h2>HTML, CSS, JavaScript</h2>
+                </div>
+                <div class="MADE-WITH">
+                    <h1>Created on:</h1>
+                    <h2>Pending...</h2>
+                </div>
+                <div class="RESPONSIVE">
+                    <h1 id="left">Responsive:</h1>
+                    <h2 id="left">Yes</h2>
+                </div>
+                <div class="DISCRIPTION">
+                    <h1 id="left">Code Discription:</h1>
+                    <p id="left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, optio. Veniam esse maiores provident harum est aliquid qui, molestiae explicabo. Est harum reprehenderit at ea eos architecto cum eius omnis ex a.</p>
+                </div>
+            </div>
+
+            <!-- MY PROCECTS -->
+            <div class="PROJECT_container">
+                <div class="projectIMAGE">
+                    <img src="https://images.unsplash.com/photo-1716565679311-5179cc3dd908?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Anas Alshanti's Photo"> 
+                </div>
+                <div class="TITLE">
+                    <h1>Title:</h1>
+                    <h2>XXXXX</h2>
+                </div>
+                <div class="DATE">
+                    <h1>Made With:</h1>
+                    <h2>HTML, CSS, JavaScript</h2>
+                </div>
+                <div class="MADE-WITH">
+                    <h1>Created on:</h1>
+                    <h2>Pending...</h2>
+                </div>
+                <div class="RESPONSIVE">
+                    <h1 id="left">Responsive:</h1>
+                    <h2 id="left">Yes</h2>
+                </div>
+                <div class="DISCRIPTION">
+                    <h1 id="left">Code Discription:</h1>
+                    <p id="left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, optio. Veniam esse maiores provident harum est aliquid qui, molestiae explicabo. Est harum reprehenderit at ea eos architecto cum eius omnis ex a.</p>
+                </div>
+            </div>
+
+            <!-- MY PROCECTS -->
+            <div class="PROJECT_container">
+                <div class="projectIMAGE">
+                    <img src="https://images.unsplash.com/photo-1716565679311-5179cc3dd908?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Anas Alshanti's Photo"> 
+                </div>
+                <div class="TITLE">
+                    <h1>Title:</h1>
+                    <h2>XXXXX</h2>
+                </div>
+                <div class="DATE">
+                    <h1>Made With:</h1>
+                    <h2>HTML, CSS, JavaScript</h2>
+                </div>
+                <div class="MADE-WITH">
+                    <h1>Created on:</h1>
+                    <h2>Pending...</h2>
+                </div>
+                <div class="RESPONSIVE">
+                    <h1 id="left">Responsive:</h1>
+                    <h2 id="left">Yes</h2>
+                </div>
+                <div class="DISCRIPTION">
+                    <h1 id="left">Code Discription:</h1>
+                    <p id="left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, optio. Veniam esse maiores provident harum est aliquid qui, molestiae explicabo. Est harum reprehenderit at ea eos architecto cum eius omnis ex a.</p>
+                </div>
+            </div>
+
+            <!-- MY PROCECTS -->
+            <div class="PROJECT_container">
+                <div class="projectIMAGE">
+                    <img src="https://images.unsplash.com/photo-1716565679311-5179cc3dd908?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Anas Alshanti's Photo"> 
+                </div>
+                <div class="TITLE">
+                    <h1>Title:</h1>
+                    <h2>XXXXX</h2>
+                </div>
+                <div class="DATE">
+                    <h1>Made With:</h1>
+                    <h2>HTML, CSS, JavaScript</h2>
+                </div>
+                <div class="MADE-WITH">
+                    <h1>Created on:</h1>
+                    <h2>Pending...</h2>
+                </div>
+                <div class="RESPONSIVE">
+                    <h1 id="left">Responsive:</h1>
+                    <h2 id="left">Yes</h2>
+                </div>
+                <div class="DISCRIPTION">
+                    <h1 id="left">Code Discription:</h1>
+                    <p id="left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, optio. Veniam esse maiores provident harum est aliquid qui, molestiae explicabo. Est harum reprehenderit at ea eos architecto cum eius omnis ex a.</p>
+                </div>
+            </div>
+
+            <!-- MY PROCECTS -->
+            <div class="PROJECT_container">
+                <div class="projectIMAGE">
+                    <img src="https://images.unsplash.com/photo-1716565679311-5179cc3dd908?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Anas Alshanti's Photo"> 
+                </div>
+                <div class="TITLE">
+                    <h1>Title:</h1>
+                    <h2>XXXXX</h2>
+                </div>
+                <div class="DATE">
+                    <h1>Made With:</h1>
+                    <h2>HTML, CSS, JavaScript</h2>
+                </div>
+                <div class="MADE-WITH">
+                    <h1>Created on:</h1>
+                    <h2>Pending...</h2>
+                </div>
+                <div class="RESPONSIVE">
+                    <h1 id="left">Responsive:</h1>
+                    <h2 id="left">Yes</h2>
+                </div>
+                <div class="DISCRIPTION">
+                    <h1 id="left">Code Discription:</h1>
+                    <p id="left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, optio. Veniam esse maiores provident harum est aliquid qui, molestiae explicabo. Est harum reprehenderit at ea eos architecto cum eius omnis ex a.</p>
+                </div>
+            </div>
+            </div>
+        </div>
+   
     </div>
-                
-
-
-                                                <!--{ PROJECT #1 }-->
-
-  <div class="projectsMainContainer">
-    <!-- MY IMAGE SHOULD BE ON TOP -->
-    <div id="projectIMAGE">
-        <img src="https://images.unsplash.com/photo-1716565679311-5179cc3dd908?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Anas Alshanti's Photo">
-    </div>
-
-    <!-- THIS IS THE FIRST ROW, THE FLEX SHOULD BE COLOMN  -->
-
-    <div class="FIRSTrow">
-        <div id="TITLE">
-            <h1>title:</h1>
-            <h2>XXXXX</h2>
-        </div>
-
-        <div id="DATE">
-            <h1>Made With:</h1>
-            <h2>HTML, CSS, JavaScript</h2>
-        </div>
-
-        <div id="MADE-WITH">
-            <h1>Created on:</h1>
-            <h2>XXXXX</h2>
-        </div>
-    </div>
-     <!-- THIS IS THE SECOND ROW THE FLEX SHOULD ME COLOMN -->
-    <div class="SECONDrow">
-         <div id="RESPONSIVE">
-            <h1>Responsive:</h1>
-            <h2>XXXXX</h2>
-        </div>
-
-        <div id="DISCRIPTION">
-            <h1>Code Discription:</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, optio. Veniam esse maiores provident harum est aliquid qui, molestiae explicabo. Est harum reprehenderit at ea eos architecto cum eius omnis ex a.</p>
-        </div>
-    </div>
-</div>
-
-<!-- SECOND PROJECT -->
-<!-- ....................................................................................................................................................................................................................................................... -->
-  <div class="projectsMainContainer">
-    <!-- MY IMAGE SHOULD BE ON TOP -->
-    <div id="projectIMAGE">
-        <img src="https://images.unsplash.com/photo-1716565679311-5179cc3dd908?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Anas Alshanti's Photo">
-    </div>
-
-    <!-- THIS IS THE FIRST ROW, THE FLEX SHOULD BE COLOMN  -->
-
-    <div class="FIRSTrow">
-        <div id="TITLE">
-            <h1>title:</h1>
-            <h2>XXXXX</h2>
-        </div>
-
-        <div id="DATE">
-            <h1>Made With:</h1>
-            <h2>HTML, CSS, JavaScript</h2>
-        </div>
-
-        <div id="MADE-WITH">
-            <h1>Created on:</h1>
-            <h2>XXXXX</h2>
-        </div>
-    </div>
-     <!-- THIS IS THE SECOND ROW THE FLEX SHOULD ME COLOMN -->
-    <div class="SECONDrow">
-         <div id="RESPONSIVE">
-            <h1>Responsive:</h1>
-            <h2>XXXXX</h2>
-        </div>
-
-        <div id="DISCRIPTION">
-            <h1>Code Discription:</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, optio. Veniam esse maiores provident harum est aliquid qui, molestiae explicabo. Est harum reprehenderit at ea eos architecto cum eius omnis ex a.</p>
-        </div>
-    </div>
-</div>
-<!-- ...................................................................................................................................................................................................................................................... -->
-                                          <!--{ PROJECT #2 }-->   
-</div>
-<div>
-
+</div> 
 </body>
 </html>
